# MineContext

./: .gitignore  CONTRIBUTING.md  README.md  README_zh.md  WINDOWS_IMPLEMENTATION_SUMMARY.md  build.bat  build.sh  pyproject.toml  start.bat
config/: config.yaml  prompts_en.yaml  prompts_zh.yaml
docs/: 01-getting-started.md  02-user-guide.md  03-architecture-overview.md  04-data-flow-workflow.md  05-configuration-guide.md  06-api-reference.md  07-storage-system.md  08-llm-integration.md  09-context-capture.md  10-context-processing.md  11-web-interface.md  12-development-guide.md  README.md  windowsadaption.md
opencontext/: cli.py
opencontext/config/: config_manager.py
opencontext/context_consumption/completion/: completion_service.py
opencontext/context_consumption/generation/: smart_todo_manager.py
opencontext/managers/: __init__.py  consumption_manager.py
opencontext/models/: __init__.py  enums.py
opencontext/server/: component_initializer.py  opencontext.py
opencontext/server/routes/: completions.py  content_generation.py  context.py  debug.py  events.py  monitoring.py  settings.py  vaults.py  web.py
opencontext/storage/: base_storage.py  unified_storage.py
opencontext/storage/backends/: __init__.py  chromadb_backend.py  sqlite_backend.py
opencontext/tools/: tool_definitions.py  tools_executor.py
opencontext/tools/operation_tools/: web_search_tool.py
opencontext/tools/profile_tools/: profile_entity_tool.py
opencontext/tools/retrieval_tools/: __init__.py  activity_context_tool.py  base_context_retrieval_tool.py  base_retrieval_tool.py  (+10 more)
(+8 files in other folders)
